--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">Address</h5>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>1A Jubilee Crossing Next To Hungry Lion</p>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>21192 Pisolite street, ext 7, Soshanguve, 0152</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>065 995 0481</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>DRSOTSHANHLEKO@GMAIL.COM</p>
